# WimsConstructionCam

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WimsConstructionCam.sln  WimsConstructionCam.vcxproj  makefile  wimsconstructioncam-version.h.in  wimsconstructioncam.cpp  wimsconstructioncam.service
Linux/WimsConstructionCam/: WimsConstructionCam.vcxproj  WimsConstructionCam_1.20220712-1_armhf.deb  WimsConstructionCam_1.20220714-1_armhf.deb  WimsConstructionCam_1.20220714-2_armhf.deb  WimsConstructionCam_1.20220714-3_armhf.deb  WimsConstructionCam_1.20220714-4_armhf.deb  WimsConstructionCam_1.20220715-1_armhf.deb  WimsConstructionCam_1.20220715-2_armhf.deb  WimsConstructionCam_1.20220715-3_armhf.deb  WimsConstructionCam_1.20220716-1_armhf.deb  WimsConstructionCam_1.20220716-2_armhf.deb  WimsConstructionCam_1.20220716-3_armhf.deb  WimsConstructionCam_1.20220716-4_armhf.deb  WimsConstructionCam_1.20220716-5_armhf.deb  WimsConstructionCam_1.20220717-1_armhf.deb  WimsConstructionCam_1.20220718-1_armhf.deb  WimsConstructionCam_1.20220719-1_armhf.deb  WimsConstructionCam_1.20220719-2_armhf.deb  WimsConstructionCam_1.20220719-3_armhf.deb  WimsConstructionCam_1.20220719-4_armhf.deb  WimsConstructionCam_1.20220721-2_armhf.deb  WimsConstructionCam_1.20220730-1_armhf.deb  WimsConstructionCam_1.20220801-5_armhf.deb  wimsconstructioncam.cpp
Linux/WimsConstructionCam/SIM7600G-H 4G HAT (B) For Raspberry Pi, LTE Cat-4 4G _ 3G _ 2G Support, GNSS Positioning, Global Band_files/: bootstrap.min.css  sh.f48a1a04fe8dbf021b4cda1d.html
Linux/WimsConstructionCam/SupportingDocuments/: Using 4G LTE wireless modems on a Raspberry Pi _ Jeff Geerling.html
Linux/WimsConstructionCam/WimsConstructionCam/DEBIAN/: control
SupportingDocuments/Using 4G LTE wireless modems on a Raspberry Pi _ Jeff Geerling_files/: js_N016WM3WXATGThTsUBXPArs2_wDkqcT90ILbCz5p_gE.js.download  tracker.js.download
WimsConstructionCam/: Notes on build.txt  SIM7600G-H 4G HAT (B) For Raspberry Pi, LTE Cat-4 4G _ 3G _ 2G Support, GNSS Positioning, Global Band.html  WimsConstructionCam.vcxproj  makefile  wimconstructioncam.cpp  wimsconstructioncam.cpp
WimsConstructionCam/DEBIAN/: control  postrm
WimsConstructionCam/SIM7600G-H 4G HAT (B) For Raspberry Pi, LTE Cat-4 4G _ 3G _ 2G Support, GNSS Positioning, Global Band_files/: shares.json
WimsConstructionCam/Using 4G LTE wireless modems on a Raspberry Pi _ Jeff Geerling_files/: css_eNW2531dcDNYjMPraE8XDVzKUGW1yLJPeSm_lPpIbXc.css
WimsConstructionCam/WimsConstructionCam/DEBIAN/: control  postinst  postrm  prerm
WimsConstructionCam/usr/local/etc/wimsconstructioncam/: hdr.json  imx219_200.json  imx219_20d-1.json  imx219_45d.json  imx219_55d.json
WimsConstructionCam/usr/local/lib/systemd/system/: wimsconstructioncam.service
etc-wimsconstructioncam/: imx219_70d.json  imx219_original.json
(+3 files in other folders)
